use Spring Events to decouple Crew and Treasure contexts

--- a/spring-service/pom.xml
+++ b/spring-service/pom.xml
@@ -41,6 +41,7 @@
     <dependency>
       <groupId>de.flapdoodle.embed</groupId>
       <artifactId>de.flapdoodle.embed.mongo</artifactId>
+      <version>3.4.5</version>
     </dependency>
 
     <dependency>
@@ -87,6 +88,12 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.tngtech.archunit</groupId>
+      <artifactId>archunit</artifactId>
+      <version>0.23.1</version>
       <scope>test</scope>
     </dependency>
 
