--- a/ui-react/package.json
+++ b/ui-react/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-query": "^3.39.1"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.1",
