--- a/ui-react/package.json
+++ b/ui-react/package.json
@@ -9,9 +9,13 @@
     "generate": "npx @openapitools/openapi-generator-cli generate -i ../api/api.yaml -g typescript-fetch -o ./src/generated/"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-query": "^3.39.1"
+    "react-query": "^3.39.1",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.1",
